Fix loading spinner on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -165,13 +165,13 @@ body {
   position: absolute;
   width: 64px;
   height: 64px;
-  left: 140px;
+  left: 100px;
   top: 100px;
 }
 .loading-spinner div {
   position: absolute;
   border: 4px solid tomato;
-  opacity: 1;
+  opacity: 0;
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
